--- a/template.html
+++ b/template.html
@@ -5,10 +5,16 @@
 </div>
 <!--Select-->
 <div class="field-wrapper">
-    <label for="Style1" class="float_spl_label">Style 1</label>
-    <select name="Style 1" placeholder="Style 1">
-        <option value="" selected="selected">Style 1</option>
-        <option value="AL">Style 2</option>
+    <label for="state" class="float_spl_label">State</label>
+    <select name="State" placeholder="State">
+        <option value="" selected="selected">State</option>
+        <option value="AL">Alabama</option>
+        <option value="AK">Alaska</option>
+        <option value="AZ">Arizona</option>
+        <option value="AR">Arkansas</option>
+        <option value="CA">California</option>
+        <option value="CO">Colorado</option>
+        <option value="CT">Connecticut</option>
     </select>
 </div>
 <!--Checkbox-->
