--- a/Similar_Proposals.html
+++ b/Similar_Proposals.html
@@ -180,8 +180,8 @@
                                          </button>
                                        </div>
                                      </div>
+                                     <button class="customBtn c_green"><i class="fa fa-plus"></i> ADD</button>
                                    </div>
-                                   
                                  </div>
                                </div>
                               </div>
