--- a/bundle_proposal.html
+++ b/bundle_proposal.html
@@ -268,9 +268,8 @@
                                            <td><button class="deleteBtnTbl"><i class="fa fa-times"></i></button></td>
                                        </tr>
                                    </table>
-                                   <button class="btn btn-danger" id="toggle">SHOW POP UP</button>
                                </div>
-                               
+                               <div class="footerBtnBox"><button class="customBtn greenBtn" id="toggle"><i class="fa fa-plus"></i> ADD NEW</button></div>
                         </div>
                     </div>
                 </div>
