--- a/template.html
+++ b/template.html
@@ -10,11 +10,6 @@
         <option value="" selected="selected">State</option>
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
-        <option value="AZ">Arizona</option>
-        <option value="AR">Arkansas</option>
-        <option value="CA">California</option>
-        <option value="CO">Colorado</option>
-        <option value="CT">Connecticut</option>
     </select>
 </div>
 <!--Checkbox-->
@@ -50,3 +45,26 @@
         <div class="col-lg-6"></div>
     </div>
 </div>
+
+<!--POP UP-->
+
+<div class="outerDiv slide_popup slide-left slide60">
+            <div class="slide-in from-right">
+                <div class="slide-in-content left_shadow">
+                    <div class="slideouter">
+                        <div class="slideHeader">
+                            <h3>Title Here</h3>
+                            <a href="#" class="close" id="popclose" onclick="closeSlide()"></a>
+                        </div>
+                        <div>
+
+                        </div>
+                    </div>
+                    <div class="slideFooterBtn">
+                        <button class="customBtn blueBtn">Update</button>
+                        <button class="customBtn greenBtn">Approve</button>
+                        <button class="customBtn c_del">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
