--- a/Commercial.html
+++ b/Commercial.html
@@ -110,121 +110,61 @@
                     <div class="clearfix"></div>
                     <div class="box_content">
                         <div class="content_full tabWrap">
-                            <div class="container_fluid labelGrid">
-                                <div class="row">
-                                    <div class="col-xs-3">Meeting Title</div>
-                                    <div class="col-xs-9">CEC Meeting - Date</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-3">Attendees</div>
-                                    <div class="col-xs-9">Ajmal Naik, Shujuddhin, Mary Shelley</div>
-                                </div>
-                            </div>
-                            <div class="recom_section decisionHeight">
-                                <div class="recom_box">
-                                    <h4>Proposal Title 1</h4>
+                            <ul class="infinite-tabs">
+                                <li><a href="#one">Lorem</a></li>
+                                <li><a href="#two">Ipsum</a></li>
+                                <li><a href="#three">Dolor</a></li>
+                                <li><a href="#three">met</a></li>
+                                <li><a href="#one">word</a></li>
+                                <li><a href="#two">another</a></li>
+                                <li><a href="#three">Keep</a></li>
+                                <li><a href="#three">Things</a></li>
+                                <li><a href="#one">clean</a></li>
+                                <li><a href="#two">yet</a></li>
+                                <li><a href="#three">another</a></li>
+                                <li><a href="#three">one</a></li>
+                                <li><a href="#one">Thinking</a></li>
+                                <li><a href="#two">Texstsd</a></li>
+                                <li><a href="#three">dsfjsf</a></li>
+                                <li><a href="#three">fnkjn</a></li>
+                                <li><a href="#one">sdnfjsdf</a></li>
+                                <li><a href="#two">dkjmkldsf</a></li>
+                                <li><a href="#three">nkvkd</a></li>
+                                <li><a href="#three">bshndsf</a></li>
+                                <li><a href="#two">njsdkf</a></li>
+                                <li><a href="#three">mjndfsdf</a></li>
+                                <li><a href="#three">sbhdhsd</a></li>
+                            </ul>
+                            <div class="tab-content highLimit">
+                                <div class="singleSection">
                                     <div class="container_fluid">
                                         <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
+                                            <div class="col-lg-6 col-md-8 col-xs-12">
+                                                <div class="formTitle">Commercial</div>
+                                                <div class="field-wrapper">
+                                                    <label for="lname" class="float_spl_label">Expected Return of Investment</label>
+                                                    <input type="text" name="lname" placeholder="Expected Return of Investment" />
+                                                </div>
+                                                <div class="field-wrapper">
+                                                    <label for="lname" class="float_spl_label">Actual Return of Investment</label>
+                                                    <input type="text" name="lname" placeholder="Actual Return of Investment" />
+                                                </div>
+                                                <div class="customField">
+                                                    <label class="txtAreaLabel">Comments</label>
+                                                    <textarea></textarea>
+                                                </div>
+                                                <div class="attachBox">
+                                                    <label>Commercial Plan</label>
+                                                    <input type="file" name="Attach">
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 2</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="footerBtnBox">
+                                    <button class="customBtn"><i class="fa fa-times"></i> Cancel</button>
+                                    <button class="customBtn greenBtn"><i class="fa fa-check"></i> Save</button>
                                 </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 3</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tableBottom">
-                                <div class="field-wrapper">
-                                    <input type="checkbox" name="" id="Radio">
-                                    <label class="radio_label" for="Radio">Agree with the decision</label>
-                                </div>
-                            </div>
-                            <div class="footerBtnBox">
-                                <button class="customBtn"><i class="fa fa-times"></i> Cancel</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-print"></i> Print</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-check"></i> Save</button>
                             </div>
                         </div>
                     </div>
