--- a/Legal.html
+++ b/Legal.html
@@ -110,121 +110,76 @@
                     <div class="clearfix"></div>
                     <div class="box_content">
                         <div class="content_full tabWrap">
-                            <div class="container_fluid labelGrid">
-                                <div class="row">
-                                    <div class="col-xs-3">Meeting Title</div>
-                                    <div class="col-xs-9">CEC Meeting - Date</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-3">Attendees</div>
-                                    <div class="col-xs-9">Ajmal Naik, Shujuddhin, Mary Shelley</div>
-                                </div>
-                            </div>
-                            <div class="recom_section decisionHeight">
-                                <div class="recom_box">
-                                    <h4>Proposal Title 1</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
+                            <ul class="infinite-tabs">
+                                <li><a href="#one">Lorem</a></li>
+                                <li><a href="#two">Ipsum</a></li>
+                                <li><a href="#three">Dolor</a></li>
+                                <li><a href="#three">met</a></li>
+                                <li><a href="#one">word</a></li>
+                                <li><a href="#two">another</a></li>
+                                <li><a href="#three">Keep</a></li>
+                                <li><a href="#three">Things</a></li>
+                                <li><a href="#one">clean</a></li>
+                                <li><a href="#two">yet</a></li>
+                                <li><a href="#three">another</a></li>
+                                <li><a href="#three">one</a></li>
+                                <li><a href="#one">Thinking</a></li>
+                                <li><a href="#two">Texstsd</a></li>
+                                <li><a href="#three">dsfjsf</a></li>
+                                <li><a href="#three">fnkjn</a></li>
+                                <li><a href="#one">sdnfjsdf</a></li>
+                                <li><a href="#two">dkjmkldsf</a></li>
+                                <li><a href="#three">nkvkd</a></li>
+                                <li><a href="#three">bshndsf</a></li>
+                                <li><a href="#two">njsdkf</a></li>
+                                <li><a href="#three">mjndfsdf</a></li>
+                                <li><a href="#three">sbhdhsd</a></li>
+                            </ul>
+                            <div class="tab-content highLimit">
+                                <div class="verifyTable">
+                                    <table class="tableEdit ">
+                                        <tr class="row">
+                                            <th class="col-xs-4">Contract Draft</th>
+                                            <th class="col-xs-2">Uploaded On</th>
+                                            <th class="col-xs-4">Comments</th>
+                                            <th class="col-xs-1"></th>
+                                            <th class="col-xs-1"></th>
+                                        </tr>
+                                        <tr class="row">
+                                            <td>
+                                                <div class="field-wrapper">
+                                                    <label class="spl_label">Title</label>
+                                                    
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="field-wrapper">
+                                                    <label for="lname" class="float_spl_label">Uploaded On</label>
+                                                    <input type="date" name="lname" placeholder="Uploaded On" />
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <div class="field-wrapper">
+                                                    <label for="lname" class="float_spl_label">Comments</label>
+                                                    <input type="text" name="lname" placeholder="Comments" />
+                                                </div>
+                                            </td>
+                                            <td class="txtCenter">
+                                                <button class="blueBtnTbl"><i class="fa fa-external-link"></i></button>
+                                            </td>
+                                            <td  class="txtCenter">
+                                                <button class="grayBtnTbl"><i class="fa fa-download"></i></button>
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <div class="tableBottom">
+                                        <button class="customBtn greenBtn"><i class="fa fa-plus"></i> ADD NEW</button>
                                     </div>
                                 </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 2</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
+                                <div class="footerBtnBox">
+                                    <button class="customBtn"><i class="fa fa-times"></i> Cancel</button>
+                                    <button class="customBtn greenBtn"><i class="fa fa-check"></i> Save</button>
                                 </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 3</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tableBottom">
-                                <div class="field-wrapper">
-                                    <input type="checkbox" name="" id="Radio">
-                                    <label class="radio_label" for="Radio">Agree with the decision</label>
-                                </div>
-                            </div>
-                            <div class="footerBtnBox">
-                                <button class="customBtn"><i class="fa fa-times"></i> Cancel</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-print"></i> Print</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-check"></i> Save</button>
                             </div>
                         </div>
                     </div>
