--- a/TV Content Evaluation Committee Meeting01.html
+++ b/TV Content Evaluation Committee Meeting01.html
@@ -110,122 +110,24 @@
                     <div class="clearfix"></div>
                     <div class="box_content">
                         <div class="content_full tabWrap">
-                            <div class="container_fluid labelGrid">
-                                <div class="row">
-                                    <div class="col-xs-3">Meeting Title</div>
-                                    <div class="col-xs-9">CEC Meeting - Date</div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-xs-3">Attendees</div>
-                                    <div class="col-xs-9">Ajmal Naik, Shujuddhin, Mary Shelley</div>
-                                </div>
-                            </div>
-                            <div class="recom_section decisionHeight">
-                                <div class="recom_box">
-                                    <h4>Proposal Title 1</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 2</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="recom_box">
-                                    <h4>Proposal Title 3</h4>
-                                    <div class="container_fluid">
-                                        <div class="row">
-                                            <div class="col-xs-3">
-                                                Recommendations :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Comments :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Decision :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                <label class="accept">Accepted</label>
-                                            </div>
-                                            <div class="col-xs-3">
-                                                Attachment :
-                                            </div>
-                                            <div class="col-xs-9">
-                                                untitled_file.pdf
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="tableBottom">
-                                <div class="field-wrapper">
-                                    <input type="checkbox" name="" id="Radio">
-                                    <label class="radio_label" for="Radio">Agree with the decision</label>
-                                </div>
+                            <div class="tableContainer">
+                                <table class="customTable1 w100">
+                                    <tr class="row">
+                                        <th class="col-xs-8">Meeting Title</th>
+                                        <th class="col-xs-2">Meeting Date</th>
+                                        <th class="col-xs-2"></th>
+                                    </tr>
+                                    <tr class="row">
+                                        <td>Consectetur adipiscing</td>
+                                        <td>12-08-2019</td>
+                                        <td><button class="blueBtnTbl"><i class="fa fa-edit"></i></button></td>
+                                    </tr>
+                                </table>
+
                             </div>
                             <div class="footerBtnBox">
-                                <button class="customBtn"><i class="fa fa-times"></i> Cancel</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-print"></i> Print</button>
-                                <button class="customBtn greenBtn"><i class="fa fa-check"></i> Save</button>
-                            </div>
+                                    <button class="customBtn greenBtn"><i class="fa fa-plus"></i> ADD NEW</button>
+                                </div>
                         </div>
                     </div>
                 </div>
